FIX visibles cookies widget on mobile device

--- a/pwa.css
+++ b/pwa.css
@@ -293,7 +293,7 @@
     
     /* Скрываем кнопку установки в standalone режиме */
     .pwa-install-btn {
-        display: none !important;
+        display: none  ;
     }
 }
 
